--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
     "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0"
+    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1"
   }
 }
 </script>
 </head>
 <body class="bg-slate-50 text-slate-900 min-h-screen">
   <div id="root"></div>
+  <!-- IMPORTANT: Entry point script for the application -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
