--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <meta property="twitter:title" content="PS Telecom | Inventory Management">
   <meta property="twitter:description" content="Professional inventory and stock management system for PS Telecom. Powered by Gemini AI.">
 
-  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script src="https://apis.google.com/js/api.js" async defer></script>
 <script type="importmap">
@@ -38,10 +37,11 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
-<body class="bg-slate-50 text-slate-900 min-h-screen">
+<body class="bg-slate-50 text-slate-900 min-h-screen transition-colors duration-300">
   <div id="root"></div>
   <!-- IMPORTANT: Entry point script for the application -->
-  <script type="module" src="./index.tsx"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
